Create section best students

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     
     <section id="specializations">
-      <h2>Spécialisations</h2>
+      <h2>Spécialisations</h2>l
       <ul>
         <li>Informatique & Réseaux</li>
         <li>Développement Web & Mobile</li>
@@ -30,7 +30,11 @@
         <!-- Add other specializations -->
       </ul>
     </section>
-    
+
+    <section id="bestStudents">
+      <h2>La meilleure équipe d'étudiants</h2>
+    </section>
+
     <section id="address">
       <h2>Adresses</h2>
       <ul>
