Add list best students

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 
     <section id="bestStudents">
       <h2>La meilleure équipe d'étudiants</h2>
+      <ul>
+        <li>Mathis Fremiot</li>
+        <li>L'autre étudiant qui n'a pas voulu donner son nom</li>
+      </ul>
     </section>
 
     <section id="address">
