--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     <section id="specializations">
       <h2>Spécialisations</h2>
       <ul>
-        <li>Informatique & Réseaux</li>
-        <li>Développement Web & Mobile</li>
+        <li>Systèmes, Réseaux et cloud</li>
+        <li>Ingénierie du Web</li>
         <li>Sécurité Informatique</li>
-        <!-- Add other specializations -->
+        <li>Ingénierie de la Blockchain</li>
+        <li>Management et conseil en Système d'information</li>
+        <li>Architecture des logiciels</li>
+        <li>Mobilité et objets connectés</li>
+        <li>Intelligence artificielle et Big Data</li>
+        <li>Ingénierie de la Réalité virtuelle et jeux-vidéos</li>
+        <li></li>
       </ul>
     </section>
     
