Add Github redirection

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <section id="bestStudents">
       <h2>La meilleure équipe d'étudiants</h2>
       <ul>
-        <li>Mathis Fremiot</li>
-        <li>L'autre étudiant qui n'a pas voulu donner son nom</li>
+        <li><a href="https://github.com/Spykoninho" target="_blank">Mathis Fremiot</a></li>
+        <li><a href="https://github.com/PommePain" target="_blank">L'autre étudiant qui n'a pas voulu donner son nom</a></li>
       </ul>
     </section>
 
