--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <li></li>
       </ul>
     </section>
+
+    <section>
+      <h2>les bons restaurants autours</h2>
+    </section>
     
     <section id="address">
       <h2>Adresses</h2>
