Update index add restaurants list
Ajout de la liste de restaurants dans la section "bon restaurants"

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 
     <section>
       <h2>les bons restaurants autours</h2>
+      <ul>
+        <li>The Place to eat<br>246 rue du Faubourg Saint Antoine</li>
+        <li>La Poulette de Grain<br>261 Rue du Faubourg Saint-Antoine</li>
+        <li>L'églantine<br>21 Rue Fabre d'Eglantine</li>
+      </ul>
     </section>
     
     <section id="address">
