Create section "L'avis des élèves"

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
       </ul>
     </section>
 
+    <section id="avisEleves">
+      <h2>L'avis des élèves</h2>
+    </section>
+
     <section id="address">
       <h2>Adresses</h2>
       <ul>
