add avis élèves

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
     <section id="avisEleves">
       <h2>L'avis des élèves</h2>
+      <ul>
+        <li>Super école</li>
+        <li>Ecole super cool !</li>
+      </ul>
     </section>
 
     <section id="address">
