Update section bestRestaurants

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </ul>
     </section>
 
-    <section>
+    <section id="bestRestaurants">
       <h2>les bons restaurants autours</h2>
       <ul>
         <li>The Place to eat<br>246 rue du Faubourg Saint Antoine</li>
